# A-Shell-Named-Sakura

./: .gitignore  AGENTS.md  INSTALL.md  README.md  gtk-app-launcher.in  justfile  meson.build  pyproject.toml
.opencode/skills/venv-package-manager/: SKILL.md
build_scripts/: compile_scss.py
data/: com.launcher.app.desktop
src/: app.gresource.xml  launcher.blp  main.py  style.scss
src/services/: __init__.py  apps_service.py
src/ui/: README.md  __init__.py  app_row.blp
src/utils/: __init__.py  resource_loader.py
src/widgets/: __init__.py  app_row.py
src/windows/: __init__.py  launcher.py
